fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
   font-size: 10pt;
   margin: 0;
   color: #333;
-  max-width: 38em;
+  max-width: 500px;
 } 
 
 a,
